--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,44 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- login tags -->
 
-		<!-- Stylesheets -->
-		<!-- <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet'> -->
-		<link href='assets/dashboard/vendor/unicons-2.0.1/css/unicons.css' rel='stylesheet'>
-		<link href="assets/dashboard/css/vertical-responsive-menu.min.css" rel="stylesheet">
-		<link href="assets/dashboard/css/style.css" rel="stylesheet">
-		<link href="assets/dashboard/css/responsive.css" rel="stylesheet">
-		<!-- <link href="assets/dashboard/css/night-mode.css" rel="stylesheet"> -->
-		
-		<!-- Vendor Stylesheets -->
-		<link href="assets/dashboard/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-		<!-- <link href="vendor/OwlCarousel/assets/owl.carousel.css" rel="stylesheet"> -->
-		<!-- <link href="vendor/OwlCarousel/assets/owl.theme.default.min.css" rel="stylesheet"> -->
-		<link href="assets/dashboard/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="assets/dashboard/vendor/semantic/semantic.min.css">	
-		
+  <!-- Stylesheets -->
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet'>
+  <link href='assets/dashboard/vendor/unicons-2.0.1/css/unicons.css' rel='stylesheet'>
+  <link href="assets/dashboard/css/vertical-responsive-menu.min.css" rel="stylesheet">
+  <link href="assets/dashboard/css/style.css" rel="stylesheet">
+  <link href="assets/dashboard/css/responsive.css" rel="stylesheet">
+  <link href="assets/dashboard/css/night-mode.css" rel="stylesheet">
+
+  <!-- Vendor Stylesheets -->
+  <link href="assets/dashboard/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="assets/dashboard/vendor/OwlCarousel/assets/owl.carousel.css" rel="stylesheet">
+  <link href="assets/dashboard/vendor/OwlCarousel/assets/owl.theme.default.min.css" rel="stylesheet">
+  <link href="assets/dashboard/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/dashboard/vendor/semantic/semantic.min.css">
+
   <!-- end of login tags -->
 
+  <!-- landing page tags  -->
   <!-- Bootstrap CSS-->
-  <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css"> -->
   <!-- Ionicons CSS-->
-  <link rel="stylesheet" href="assets/css/ionicons.min.css">
+  <!-- <link rel="stylesheet" href="assets/css/ionicons.min.css"> -->
   <!-- Device mockups CSS-->
   <!-- <link rel="stylesheet" href="assets/css/device-mockups.css"> -->
   <!-- Google fonts - Source Sans Pro-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700"> -->
   <!-- Swiper sLider-->
-  <link rel="stylesheet" href="assets/vendor/swiper/css/swiper.min.css">
+  <!-- <link rel="stylesheet" href="assets/vendor/swiper/css/swiper.min.css"> -->
   <!-- theme stylesheet-->
-  <link rel="stylesheet" href="assets/css/style.default.css" id="theme-stylesheet">
+  <!-- <link rel="stylesheet" href="assets/css/style.default.css" id="theme-stylesheet"> -->
   <!-- Custom stylesheet - for your changes-->
-  <link rel="stylesheet" href="assets/css/custom.css">
-  <link rel="stylesheet" href="assets/animate/animate.min.css">
+  <!-- <link rel="stylesheet" href="assets/css/custom.css"> -->
+  <!-- <link rel="stylesheet" href="assets/animate/animate.min.css"> -->
+  <!-- end of landing page tags  -->
+
   <meta charset="utf-8">
   <title>Smart Academy</title>
   <base href="/">
@@ -43,24 +47,28 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
+
 <body class='animate__animated animate__fadeIn '>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<!-- JavaScript files-->
-<script src="assets/vendor/jquery/jquery.min.js"></script>
+  <!-- JavaScript files-->
+  <!-- <script src="assets/vendor/jquery/jquery.min.js"></script>
 <script src="assets/vendor/popper.js/umd/popper.min.js"> </script>
 <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
 <script src="assets/vendor/swiper/js/swiper.min.js"></script>
-<script src="assets/js/front.js"></script>
+<script src="assets/js/front.js"></script> -->
 
-<!-- login scripts -->
-<!-- <script src="assets/dashboard/js/jquery-3.3.1.min.js"></script> -->
-<!-- <script src="assets/dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
-<!-- <script src="assets/dashboard/vendor/semantic/semantic.min.js"></script> -->
-<!-- <script src="assets/dashboard/js/custom.js"></script>	 -->
-<!-- <script src="assets/dashboard/js/night-mode.js"></script> -->
+  <!-- login scripts -->
+  <script src="assets/dashboard/js/jquery-3.3.1.min.js"></script>
+  <script src="assets/dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/dashboard/vendor/semantic/semantic.min.js"></script>
+	<script src="assets/dashboard/vendor/OwlCarousel/owl.carousel.js"></script>
+  <!-- <script src="assets/dashboard/js/custom.js"></script> -->
+  <script src="assets/dashboard/js/night-mode.js"></script>
 
-<!-- end of login scripts -->
+
+  <!-- end of login scripts -->
 </body>
+
 </html>
