--- a/src/index.html
+++ b/src/index.html
@@ -34,27 +34,27 @@
 
     <!-- JavaScript files-->
 
-    <script src="assets/js/vertical-responsive-menu.min.js"></script>
+    <!-- <script src="assets/js/vertical-responsive-menu.min.js"></script> -->
     <script src="assets/js/jquery.min.js"></script>
-      <script src="assets/js/popper.min.js"> </script>
+      <!-- <script src="assets/js/popper.min.js"> </script> -->
       <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.cookie.js"> </script>
-    <script src="assets/js/swiper.min.js"> </script>
-    <script src="assets/js/semantic.min.js"></script>
-    <script src="assets/js/front.js"></script>
-    <script src="assets/js/custom.js"></script>	
-    <script src="assets/js/custom1.js"></script>
-    <script src="assets/js/night-mode.js"></script>	
+    <!-- <script src="assets/js/jquery.cookie.js"> </script> -->
+    <!-- <script src="assets/js/swiper.min.js"> </script> -->
+    <!-- <script src="assets/js/semantic.min.js"></script> -->
+    <!-- <script src="assets/js/front.js"></script> -->
+    <!-- <script src="assets/js/custom.js"></script>	 -->
+    <!-- <script src="assets/js/custom1.js"></script> -->
+    <!-- <script src="assets/js/night-mode.js"></script>	 -->
     <!-- <script src="js/datepicker.min.js"></script>
     <script src="js/i18n/datepicker.en.js"></script> -->
-    <script src="assets/js/jquery-steps.min.js"></script>
-    <script>
+    <!-- <script src="assets/js/jquery-steps.min.js"></script> -->
+    <!-- <script>
       $('#add-course-tab').steps({
         onFinish: function () {
         alert('Wizard Completed');
         }
       });		
-    </script>
+    </script> -->
 </body>
 
 </html>
