--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html>
 
 <head>
-   <!-- Stylesheets -->
-   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-   <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet'>
-   <link href='assets/css/unicons.css' rel='stylesheet'>
-   <link rel="stylesheet" href="assets/css/ionicons.min.css">
-   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-   <link href="assets/css/datepicker.min.css" rel="stylesheet">
-   <link href="assets/css/vertical-responsive-menu.min.css" rel="stylesheet">
-   <link href="assets/css/instructor-dashboard.css" rel="stylesheet">
-   <link href="assets/css/instructor-responsive.css" rel="stylesheet">
-   <link href="assets/css/jquery-steps.css" rel="stylesheet">
-   <link href="assets/css/style.css" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">	
-   <link rel="stylesheet" href="assets/css/landing-style.css" id="theme-stylesheet">
-   <link href="assets/css/night-mode.css" rel="stylesheet">
-   <!-- theme stylesheet-->
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet'>
+  <link href='assets/css/unicons.css' rel='stylesheet'>
+  <link rel="stylesheet" href="assets/css/ionicons.min.css">
+  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="assets/css/datepicker.min.css" rel="stylesheet">
+  <link href="assets/css/vertical-responsive-menu.min.css" rel="stylesheet">
+  <link href="assets/css/instructor-dashboard.css" rel="stylesheet">
+  <link href="assets/css/instructor-responsive.css" rel="stylesheet">
+  <link href="assets/css/jquery-steps.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">
+  <link rel="stylesheet" href="assets/css/landing-style.css" id="theme-stylesheet">
+  <link href="assets/css/night-mode.css" rel="stylesheet">
+  <!-- theme stylesheet-->
 
   <meta charset="utf-8">
   <title>Smart Academy</title>
@@ -26,37 +26,40 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body class='home rtl mat-typography'>
+<body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 
-    <!-- JavaScript files-->
+  <!-- JavaScript files-->
 
-    <!-- <script src="assets/js/vertical-responsive-menu.min.js"></script> -->
-    <script src="assets/js/jquery.min.js"></script>
-      <!-- <script src="assets/js/popper.min.js"> </script> -->
-      <script src="assets/js/bootstrap.min.js"></script>
-    <!-- <script src="assets/js/jquery.cookie.js"> </script> -->
-    <!-- <script src="assets/js/swiper.min.js"> </script> -->
-    <!-- <script src="assets/js/semantic.min.js"></script> -->
-    <!-- <script src="assets/js/front.js"></script> -->
-    <!-- <script src="assets/js/custom.js"></script>	 -->
-    <!-- <script src="assets/js/custom1.js"></script> -->
-    <!-- <script src="assets/js/night-mode.js"></script>	 -->
-    <!-- <script src="js/datepicker.min.js"></script>
+  <!-- <script src="assets/js/vertical-responsive-menu.min.js"></script> -->
+  <script src="assets/js/jquery.min.js"></script>
+  <!-- <script src="assets/js/popper.min.js"> </script> -->
+  <script src="assets/js/bootstrap.min.js"></script>
+  <!-- <script src="assets/js/jquery.cookie.js"> </script> -->
+  <!-- <script src="assets/js/swiper.min.js"> </script> -->
+  <!-- <script src="assets/js/semantic.min.js"></script> -->
+  <!-- <script src="assets/js/front.js"></script> -->
+  <!-- <script src="assets/js/custom.js"></script>	 -->
+  <!-- <script src="assets/js/custom1.js"></script> -->
+  <!-- <script src="assets/js/night-mode.js"></script>	 -->
+  <!-- <script src="js/datepicker.min.js"></script>
     <script src="js/i18n/datepicker.en.js"></script> -->
-    <!-- <script src="assets/js/jquery-steps.min.js"></script> -->
-    <!-- <script>
+  <!-- <script src="assets/js/jquery-steps.min.js"></script> -->
+  <!-- <script>
       $('#add-course-tab').steps({
         onFinish: function () {
         alert('Wizard Completed');
         }
       });		
     </script> -->
+  <script>
+  
+  </script>
 </body>
 
 </html>
