--- a/src/index.html
+++ b/src/index.html
@@ -2,26 +2,26 @@
 <html>
 
 <head>
-<!-- Stylesheets -->
-<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet'>
-<link href='assets/css/unicons.css' rel='stylesheet'>
-<link rel="stylesheet" href="assets/css/ionicons.min.css">
-<link href="assets/css/all.min.css" rel="stylesheet">
-<link href="assets/css/datepicker.min.css" rel="stylesheet">
-<link href="assets/css/owl.carousel.min.css" rel="stylesheet">
-<link href="assets/css/owl.theme.default.min.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">	
-<link href="assets/css/vertical-responsive-menu.min.css" rel="stylesheet">
-<link href="assets/css/instructor-dashboard.css" rel="stylesheet">
-<link href="assets/css/instructor-responsive.css" rel="stylesheet">
-<!-- <link href="assets/css/student_dashboard.css" rel="stylesheet"> -->
-<link href="assets/css/student_responsive.css" rel="stylesheet">
-<link href="assets/css/jquery-steps.css" rel="stylesheet">
-<link href="assets/css/style.css" rel="stylesheet">
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet'>
+  <link href='assets/css/unicons.css' rel='stylesheet'>
+  <link rel="stylesheet" href="assets/css/ionicons.min.css">
+  <link href="assets/css/all.min.css" rel="stylesheet">
+  <link href="assets/css/datepicker.min.css" rel="stylesheet">
+  <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/css/owl.theme.default.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">
+  <link href="assets/css/vertical-responsive-menu.min.css" rel="stylesheet">
+  <link href="assets/css/instructor-dashboard.css" rel="stylesheet">
+  <link href="assets/css/instructor-responsive.css" rel="stylesheet">
+  <!-- <link href="assets/css/student_dashboard.css" rel="stylesheet"> -->
+  <link href="assets/css/student_responsive.css" rel="stylesheet">
+  <link href="assets/css/jquery-steps.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 
-<link rel="stylesheet" href="assets/css/landing-style.css" id="theme-stylesheet">
-<link href="assets/css/night-mode.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/landing-style.css" id="theme-stylesheet">
+  <link href="assets/css/night-mode.css" rel="stylesheet">
 
   <meta charset="utf-8">
   <title>Smart Academy</title>
@@ -41,9 +41,10 @@
   <!-- JavaScript files-->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
-  
+
   <script>
-  
+    document.addEventListener('contextmenu', event => event.preventDefault());
+
   </script>
 </body>
 
