--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,14 @@
    <link href="assets/css/style.css" rel="stylesheet">
    <link rel="stylesheet" href="assets/css/landing-style.css" id="theme-stylesheet">
    <link href="assets/css/night-mode.css" rel="stylesheet">
-   
+
   <meta charset="utf-8">
   <title>Smart Academy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <!-- <meta name="theme-color" content="#1976d2"> -->
 
 </head>
 
