--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
     document.addEventListener('contextmenu', event => event.preventDefault());
 
   </script>
+  <script src="https://player.vimeo.com/api/player.js"></script>
 </body>
 
 </html>
