updates 	signup form 		fix error msgs issuse 		add first and last name 		remove city 	server msgs When error 		if (error.message) > show message to the uer 			else > UnexpectedError msg 	auth 		redirect user to target url after login 		protect all reoutes based on user type 		notification toast when trying to access protected route 	view course instructor page in courses page
	my course page .. missing API
	study page .. missing API

--- a/src/index.html
+++ b/src/index.html
@@ -2,30 +2,33 @@
 <html>
 
 <head>
- 	<!-- Stylesheets -->
-   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-   <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet'>
-   <link href='assets/css/unicons.css' rel='stylesheet'>
-   <link rel="stylesheet" href="assets/css/ionicons.min.css">
-   <link href="assets/css/all.min.css" rel="stylesheet">
-   <link href="assets/css/datepicker.min.css" rel="stylesheet">
-   <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
-   <link href="assets/css/owl.theme.default.min.css" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">	
-   <link href="assets/css/vertical-responsive-menu.min.css" rel="stylesheet">
-   <link href="assets/css/instructor-dashboard.css" rel="stylesheet">
-   <link href="assets/css/instructor-responsive.css" rel="stylesheet">
-   <link href="assets/css/student_responsive.css" rel="stylesheet">
-   <link href="assets/css/jquery-steps.css" rel="stylesheet">
-   <link href="assets/css/style.css" rel="stylesheet">
-   <link rel="stylesheet" href="assets/css/landing-style.css" id="theme-stylesheet">
-   <link href="assets/css/night-mode.css" rel="stylesheet">
-
   <meta charset="utf-8">
   <title>Smart Academy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Favicon Icon -->
+  <link rel="icon" type="image/png" href="assets/images/fav.png">
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet'>
+  <link href='assets/css/unicons.css' rel='stylesheet'>
+  <link rel="stylesheet" href="assets/css/ionicons.min.css">
+  <link href="assets/css/all.min.css" rel="stylesheet">
+  <link href="assets/css/datepicker.min.css" rel="stylesheet">
+  <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/css/owl.theme.default.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">
+  <link href="assets/css/vertical-responsive-menu.min.css" rel="stylesheet">
+  <link href="assets/css/instructor-dashboard.css" rel="stylesheet">
+  <link href="assets/css/instructor-responsive.css" rel="stylesheet">
+  <link href="assets/css/student_responsive.css" rel="stylesheet">
+  <link href="assets/css/jquery-steps.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/landing-style.css" id="theme-stylesheet">
+  <link href="assets/css/night-mode.css" rel="stylesheet">
+
+
   <link rel="manifest" href="manifest.webmanifest">
   <!-- <meta name="theme-color" content="#1976d2"> -->
 
