--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/landing-style.css" id="theme-stylesheet">
   <link href="assets/css/night-mode.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 
   <link rel="manifest" href="manifest.webmanifest">
