--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <!-- Favicon Icon -->
   <link rel="icon" type="image/png" href="assets/images/fav.png">
 
+  <!-- cache  -->
+  <meta http-equiv='cache-control' content='no-cache'>
+  <meta http-equiv='expires' content='0'>
+  <meta http-equiv='pragma' content='no-cache'>
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet'>
