--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,10 @@
   <script src="assets/js/bootstrap.min.js"></script>
 
   <script>
-    document.addEventListener('contextmenu', event => event.preventDefault());
-
+  // chrome.management.getAll((res)=>{
+  //   console.log(res);
+  // })
+  console.log(chrome.management);
   </script>
   <script src="https://player.vimeo.com/api/player.js"></script>
 </body>
