--- a/src/assets/css/fonts/demo/demo.html
+++ b/src/assets/css/fonts/demo/demo.html
@@ -9,11 +9,73 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;11)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;17)</small></h1>
+    </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 14</h1>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-check-circle"></span>
+                <span class="mls"> icon-check-circle</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e903" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe903;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-check-circle1"></span>
+                <span class="mls"> icon-check-circle1</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e904" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe904;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+    </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
+        <div class="glyph fs2">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-close-solid"></span>
+                <span class="mls"> icon-close-solid</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e906" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe906;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-checkmark-outline"></span>
+                <span class="mls"> icon-checkmark-outline</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e905" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe905;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
-        <div class="glyph fs1">
+        <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-keyboard_arrow_right"></span>
                 <span class="mls"> icon-keyboard_arrow_right</span>
@@ -27,7 +89,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-keyboard_arrow_down"></span>
                 <span class="mls"> icon-keyboard_arrow_down</span>
@@ -41,7 +103,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-user-x"></span>
                 <span class="mls"> icon-user-x</span>
@@ -58,7 +120,7 @@
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-user-minus"></span>
                 <span class="mls"> icon-user-minus</span>
@@ -72,7 +134,7 @@
                 <input type="text" readonly value="user-minus, user3" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-lock"></span>
                 <span class="mls"> icon-lock</span>
@@ -86,7 +148,7 @@
                 <input type="text" readonly value="lock, secure" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-unlocked"></span>
                 <span class="mls"> icon-unlocked</span>
@@ -100,7 +162,7 @@
                 <input type="text" readonly value="unlocked, lock-open" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-warning"></span>
                 <span class="mls"> icon-warning</span>
@@ -114,7 +176,7 @@
                 <input type="text" readonly value="warning, sign" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-notification"></span>
                 <span class="mls"> icon-notification</span>
@@ -128,7 +190,35 @@
                 <input type="text" readonly value="notification, warning2" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-library"></span>
+                <span class="mls"> icon-library</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e921" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe921;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="library2, bank" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs4">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-credit-card"></span>
+                <span class="mls"> icon-credit-card</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e93f" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe93f;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="credit-card, money5" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-users"></span>
                 <span class="mls"> icon-users</span>
@@ -142,7 +232,7 @@
                 <input type="text" readonly value="users, group" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-bin2"></span>
                 <span class="mls"> icon-bin2</span>
@@ -156,7 +246,7 @@
                 <input type="text" readonly value="bin2, trashcan2" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-filter"></span>
                 <span class="mls"> icon-filter</span>
